clusters/home/apps/plik/plik-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plik
  namespace: plik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plik
  template:
    metadata:
      labels:
        app: plik
    spec:
      containers:
        - name: plik
          image: plik/plik:1.3.8
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: plik-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: plik
  namespace: plik
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: plik
