clusters/home/apps/plik/plik-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plik-ingress
  namespace: plik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: send.bytechance.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plik
                port:
                  number: 80
  tls:
    - hosts:
        - send.bytechance.dev
      secretName: plik-tls
